# Tetris

./: AllegroApp.cpp  AllegroApp.hpp  AllegroBase.cpp  AllegroBase.hpp  CMakeLists.txt  Constants.hpp  Figure.cpp  Figure.hpp  Gameobject.cpp  Gameobject.hpp  Mainborder.cpp  Mainborder.hpp  ScreenSaver.cpp  ScreenSaver.hpp  main.cpp  player.cpp  player.hpp  square.cpp  square.hpp
figures/: Gelevo.cpp  Gelevo.hpp  Kvadrat.cpp  Kvadrat.hpp  Lebedjlevo.cpp  Lebedjlevo.hpp  Lebedjpravo.cpp  Lebedjpravo.hpp  ge.cpp  ge.hpp  row.cpp  row.hpp  threedownoneup.cpp  threedownoneup.hpp
